# AlgoPlus

./: .gitignore  .gitmodules  .travis.yml  :w  CMakeLists.txt  COMMENTS.md  CONTRIBUTE.md  LICENSE  README.md  UNIT_TESTS.md  clang_tidy.sh  codecov.yml  requirements.txt
.github/: dependabot.yml
.github/CONTRIBUTE/: UNIT_TESTS.md
.github/workflows/: awesome_workflow.yml  cmake-single-platform.yml  codecov.yml  codeql.yml  coverage.yml  github_pages.yml  greetings.yml  macos_test_cases.yml  python-publish.yml  static.yml  tests.yml  ubuntu_test_cases.yml
algoplus/disjoint_set/: disjoint_set.cc
algoplus/graph/: graph.cc
algoplus/matrix/: tensor.cc
algoplus/tree/: avl_tree.cc  bst.cc  trie.cc
classes/graph/: graph.h
classes/list/: doubly_linked_list.h  linked_list.cc  linked_list.h  skip_list.h
classes/tree/: avl_tree.cc  avl_tree.h  bst.h
docs/: Doxyfile
docs/html/: 234__tree_8h_source.html  __image_8h_source.html  algoplus_8h_source 2.html  algoplus_8h_source.html  annotated 2.html  annotated 3.html  annotated.html  astar_8h_source 2.html  astar_8h_source.html  average__filter_8h_source.html  avl__tree_8h_source 2.html  avl__tree_8h_source.html  best__first_8h_source.html  bfs_8h_source 2.html  bfs_8h_source.html  binary__search_8h_source 2.html  binary__search_8h_source.html  bst_8h_source 2.html  bst_8h_source.html  bubble_8h_source.html  bubble__sort_8h_source.html  bucket__sort_8h_source.html  catch_8hpp_source.html  circular__linked__list_8h_source 2.html  circular__linked__list_8h_source.html  classAStar-members.html  classAStar.html  classCatch_1_1AssertionHandler-members.html  classCatch_1_1AssertionHandler.html  classCatch_1_1BinaryExpr-members.html  classCatch_1_1BinaryExpr.html  classCatch_1_1Capturer-members.html  classCatch_1_1Capturer.html  classCatch_1_1Detail_1_1Approx-members.html  classCatch_1_1Detail_1_1Approx.html  classCatch_1_1Detail_1_1IsStreamInsertable-members.html  classCatch_1_1Detail_1_1IsStreamInsertable.html  classCatch_1_1ExceptionTranslatorRegistrar-members.html  classCatch_1_1ExceptionTranslatorRegistrar.html  classCatch_1_1ExprLhs-members.html  (+2218 more)
docs/latex/: 234__tree_8h_source.tex  __image_8h_source.tex  algoplus_8h_source 3.tex  algoplus_8h_source.tex  annotated 2.tex  (+1326 more)
python/: CMakeLists.txt  bst.py  setup.py
python/algoplus_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/classes/disjoint_set/: disjoint_set.cc
python/classes/graph/: graph.cc
python/classes/tree/: tree.cc
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_main.cc
tests/algorithms/: gcd.cc
tests/algorithms/advanced/: convex_hull.cc  split_K_max.cc
tests/algorithms/dynamic_programming/: coin_change.cc  fibonacci.cc  kadane.cc  knapsack.cc  knapsack_1d.cc  knapsack_2d.cc  lcs.cc  lis.cc  partitions.cc  subset_sum.cc
tests/algorithms/geometry/: convex_hull.cc
tests/algorithms/number_theory/: eratosthenes_sieve.cc  fermat_miller_rabin.py  gcd.cc  mersenne_primes.cc  mersenne_primes.py
tests/algorithms/rmq/: rmq_segment_tree.cc  rmq_sparse_table.cc
tests/algorithms/searching/: bfs.cc  binary_search.cc  dfs.cc  exponential_search.cc  interpolation_search.cc  jump_search.cc  linear_search.cc  shortest_path.cc  split_K_max.cc  ternary_search.cc
tests/algorithms/sorting/: bubble_sort.cc  bucket_sort.cc  convex_hull.cc  counting_sort.cc  heap_sort.cc  insertion_sort.cc  merge_sort.cc  minimum_swaps.cc  quick_sort.cc  radix_sort.cc  scheduling.cc  selection_sort.cc
tests/algorithms/string/: find_and_replace.cc  kmp.cc  min_distance.cc  palindrome.cc  rabin_karp.cc  string_hashing.cc
tests/extra/: bubble.cc  table.cc
tests/graph/: graph.cc  unnamed.dot  weighted_graph.cc
tests/hash_table/: hash_table.cc
tests/heap/: min_heap.cc
tests/helpers/: debug.cc  timer.cc
tests/linalg/mat1d/: mat_1d.cc
tests/linalg/mat2d/: mat_2d.cc
tests/list/: circular_linked_list.cc  doubly_list.cc  frequency_list.cc  list.cc  skip_list.cc
tests/machine_learning/clustering/DBSCAN/: dbscan.cc
tests/machine_learning/clustering/kmeans/: kmeans.cc
tests/machine_learning/image/: image.cc
tests/machine_learning/loss_functions/: losses.cc
tests/machine_learning/regression/: lin_reg.cc  poly_reg.cc
tests/machine_learning/search_algorithms/: astar.cc  best_first.cc  hill_climbing.cc
tests/queue/: dequeue_list.cc
tests/stack/: stack_list.cc
tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/tree/: avl.cc  bst.cc  fenwick_tree.cc  interval_tree.cc  red_black_tree.cc  rope.cc  segment_tree.cc  splay_tree.cc  tree.cc  trie.cc  ttf_tree.cc  unnamed.dot
tutorial/: DBSCAN.md  avl.md  bst.md  circular_linked_list.md  dequeue.md  doubly_linked_list.md  frequency_list.md  graph.md  hash_table.md  huffman_coding.md  interval_tree.md  kmeans.md  linear_regression.md  linked_list.md  skip_list.md  splay_tree.md  stack.md  trie.md
(+533 files in other folders)
